tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__ObtainingEnderPe-AAAAAAAAAAAAAAAAAAAJZA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2404,
  "prerequisites": [
    74
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can hunt endermen the Vanilla way to get a chance at Ender Pearls, you can purchase Endermen spawn eggs, or try your luck in the End.\n\nOr you can get cruel, and stuff one into a smeltery to melt it down into delicious Liquid Ender and cast pearls from it.\n\nYou monster.\n\nSome of the dungeons have Spawner of Enderman, so you can do whatever you want with it.\n\nTo prevent endermen from teleporting, make sure to cover the smeltery so they don't see the sky.\n\nIf you manage to put a regenerating endermen in there, tag it so it doesn't despawn, and make sure your smeltery is not in a claimed chunk on a server.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lObtaining Ender Pearls",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    74
  ],
  "rewards": [],
  "tasks": []
}
