tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__PCBFactoryTier2-AAAAAAAAAAAAAAAAAAAMzA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3276,
  "prerequisites": [
    3249,
    3273
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the Nano Forge built, we can upgrade our production of circuit boards for free, but the nanites need a container to hold them. The current casings aren't enough, we need to find an alternative casing.\n\nAfter some research, infinity as a frame and enriched holmium as the protection layer seems to work well. It can be allowed to let through nanites to go into the printer base so that extra material can be directly removed instead of trying to go slower.\n\n[note]Allows the player to use the tier 2 recipes with the use of a silver nanite in the input bus. This also unlocks parallels of the PCB Factory with said formula: Log2(x) parallels, where x is the amount of nanites in the input bus.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "PCB Factory Tier 2",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3249,
    3273
  ],
  "rewards": [],
  "tasks": []
}
