tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__PimpYourWandFocu-AAAAAAAAAAAAAAAAAAAFZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1382,
  "prerequisites": [
    275
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Focal Manipulator requires both XP levels and centi-vis in order to upgrade foci. Each focus can be upgraded a total of five times, with the level cost increasing by 8 and the vis cost doubling for each upgrade.\n\nMost foci accept Frugal (lowers the vis cost to cast by 10% per level) and Potency (increases damage dealt or improves the focus in another way if it doesn't deal damage) at every level. Foci with an area of effect (like Wand Focus: Equal Trade) accept Enlarge, which usually expands the max area by one block in each direction. Some foci have special upgrades that can only be applied at certain levels (often level 3 or 5), some of which have prerequisite upgrades. See the Focus on Wand Foci & EMT tab for more information about focal upgrades and their effects.\n\nIf you regret your past decisions, you can remove upgrades in the Focal Manipulator if you have the Focal Disenchanting research. It will even refund some of the XP!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pimp Your Wand Focus",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    275
  ],
  "rewards": [],
  "tasks": []
}
