tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__PlanetaryTears-AAAAAAAAAAAAAAAAAAAIGA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2072,
  "prerequisites": [
    810
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Indeed you will be crying over all the tiers you have to do for planets. Here is a handy reference.\n\nTier 1 - Requires Oxygen Gear\nMoon\n\nTier 2 - Requires Thermal Padding\nDeimos\nMars\nPhobos\n\nTier 3 - Requires Thermal Padding Tier 2\nAsteroids - Counts as Zero-G, because there's no planet\nCallisto\nCeres\nEuropa\nGanymede\nRoss128b - Habitable Planet (needs no Oxygen Gear/Thermal Padding)\n\nTier 4 - Requires Thermal Padding Tier 2\nIo\nMercury\nVenus - Requires SpaceSuit\n\nTier 5  Requires Thermal Padding Tier 2\nEnceladus\nMiranda\nOberon\nRoss128ba\nTitan\n\nTier 6 - Requires Thermal Padding Tier 2\nProteus\nTriton\n\nTier 7   Requires Thermal Padding Tier 2\nKuiper Belt - Also counts as Zero-G\nHaumea\nMakemake\nPluto\n\nTier 8 - Requires Thermal Padding Tier 2\nAlpha Centauri Bb - Requires SpaceSuit\nBarnarda C - Habitable Planet (needs no Oxygen Gear/Thermal Padding)\nBarnarda E\nBarnarda F\nTau Ceti E - Habitable Planet (needs no Oxygen Gear/Thermal Padding)\nVega B\n\nTier 9\nHorus - Requires Thermal Padding Tier 1\nNeper - Habitable Planet (needs no Oxygen Gear/Thermal Padding)\nMehen Belt\nMaahes\nSeth\nAnubis - Requires Thermal Padding Tier 2",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Planetary Tears",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    810
  ],
  "rewards": [],
  "tasks": []
}
