tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__PowerintheEther-AAAAAAAAAAAAAAAAAAAMow==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3235,
  "prerequisites": [
    17850384832099655846
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These new hatches allow you to wirelessly store and receive energy from any location in any dimension. They can be placed in any existing multi block structure and will function as normal energy hatches. \n\nAdditionally, the wireless covers can be used for singleblock machines such as a World Accelerator or a BioLab.\n\nThe wireless network can store a total of 2^(2^31) EU, far exceeding even a max tier LSC.\n\nYou can share a wireless network with others by adding them to your network with §5/gt global_energy_join §3user1§r §2user2§r. This will make §3user1§r use §2user2's§r energy when interacting with the global network. You can leave a network at any time by doing §5/gt global_energy_join§r §4your_name your_name§r.\n\nYou cannot connect wires to these blocks. These are also designed to be highly lag efficient, meaning EU is added at large intervals to prevent needless calculations from occurring. This will also save you some TPS lag from vast wire networks.\n\n[note]If your calculator is giving up, 2^(2^31) is a number with 646,456,994 digits.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Power in the Ether",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17850384832099655846
  ],
  "rewards": [],
  "tasks": []
}
